feat(deliveries): get a delivery by id or by its transaction
